<resources>
    <string name="app_name">EasyMacros2</string>
    <string name="MENU">MENU</string>
    <string name="Protein">Protein</string>
    <string name="Carbohydrates">Carbohydrates</string>
    <string name="Fats">Fats</string>
    <string name="fruits_vegetables">Fruits / Vegetables</string>
    <string name="textview">TextView</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="portion">
        <item>1/3</item>
        <item>2/3</item>
        <item>3/3</item>
    </string-array>

</resources>
